--- a/project_info.json
+++ b/project_info.json
@@ -1,5 +1,6 @@
 {
 	"name": "CourseFiles",
+	"full_name": "dinesh99639/courseplan",
 	"icon": "",
 	"desc": "With this project, the teachers can be able to manage data in the online so that we can reduce the paper work and it is easy to get files whenever required.",
 	"tech": ["HTML", "CSS", "JavaScript", "jQuery", "BootStrap", "PHP", "MySQL"],
